[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "menu-module"
version = "1.0.0"
description = "A simple CLI menu builder with method chaining"
authors = [
  { name = "Rakha Taufiqurrahman", email = "rakhathrd1314@gmail.com" }
]

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/asda1-max"
