[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BlueRainHelper"
version = "1.1.0"
description = "A simple CLI menu builder with method chaining"
authors = [
  { name = "Asda1-max", email = "azeroth6996@gmail.com" }
]

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/asda1-max"
